<resources>
    <string name="tvCreateMeeting">Enter Date</string>

    <string name="btnRegister">Register</string>
    <string name="btnConfirmRegister">Confirm</string>
    <string name="formHeader">Teacher Registration</string>
    <string name="formSubHeader">Please enter the fields below</string>
    <string name="txtEnterIDnumber">Enter your ID number</string>
    <string name="etHintID">ID number (e.g. 11812345)</string>
    <string name="btnNext">Next</string>
    <string name="tvEmailFormatError">Please enter a valid email.</string>

    <string name="tvFirstName">First Name</string>
    <string name="tvLastName">Last Name</string>
    <string name="tvEmail">Email</string>
    <string name="tvPassword">Password</string>
    <string name="tvReenterPassword">Re-enter Password</string>


    <string name="app_name">Teachers - Attendance Tracker</string>
    <string name="btnCreateCourse">Create</string>
    <string name="btnCancelCreate">Cancel</string>
    <string name="btnExit">Exit</string>
    <string name="btnConfirm">Confirm</string>
    <string name="btnDelete">Delete</string>
    <string name="tvCreateCourseHeader">Create a Course</string>

    <string name="itemEditCourse">Edit course</string>
    <string name="itemDeleteCourse">Delete course</string>
    <string name="itemEditProfile">Edit profile</string>
    <string name="itemLogout">Logout</string>

    <string name="accountSecurity">Account security</string>
    <string name="oldPassword">Old password</string>
    <string name="newPassword">New password</string>
    <string name="confirmPassword">Confirm new password</string>
    <string name="save">Save</string>
    <string name="exit">Exit</string>
</resources>