<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterTeacherActivity">

    <EditText
        android:id="@+id/etNewID"
        android:layout_width="271dp"
        android:layout_height="48dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="70dp"
        android:ems="10"
        android:hint="@string/etHintID"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="142dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="143dp"
        android:hint="@string/txtEnterIDnumber"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="273dp"
        android:layout_height="46dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="70dp"
        android:text="@string/btnNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNewID" />
</androidx.constraintlayout.widget.ConstraintLayout>