<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity">


    <TextView
        android:id="@+id/accountSecurityHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="142dp"
        android:fontFamily="@font/roboto"
        android:text="Account Security"
        android:textColor="#004D40"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputOldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_lock"
        android:hint="@string/oldPassword"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountSecurityHeader" />

    <EditText
        android:id="@+id/inputNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_lock"
        android:hint="@string/newPassword"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputOldPassword" />

    <EditText
        android:id="@+id/inputConfirmNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_lock"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputNewPassword" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/roboto"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnDeleteRequest"
        app:layout_constraintTop_toBottomOf="@+id/inputConfirmNewPassword" />

    <Button
        android:id="@+id/btnDeleteRequest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/gray"
        android:fontFamily="@font/roboto"
        android:text="@string/btnExit"
        app:layout_constraintEnd_toStartOf="@+id/btnSave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputConfirmNewPassword" />

<!--    <Button-->
<!--        android:id="@+id/btnCreateCourse"-->
<!--        android:layout_marginTop="30dp"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:fontFamily="@font/roboto"-->
<!--        android:text="@string/btnCreateCourse"-->
<!--        app:layout_constraintTop_toBottomOf="@id/switchIsPublished"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toEndOf="@id/btnCancelCreate"/>-->

<!--    <Button-->
<!--        android:id="@+id/btnCancelCreate"-->
<!--        android:layout_marginTop="30dp"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:backgroundTint="@color/gray"-->
<!--        android:fontFamily="@font/roboto"-->
<!--        android:text="@string/btnCancelCreate"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toStartOf="@id/btnCreateCourse"-->
<!--        app:layout_constraintTop_toBottomOf="@id/switchIsPublished"/>-->

</androidx.constraintlayout.widget.ConstraintLayout>